# TJM-task

./: README.md  main.py  pyproject.toml
api/: posts.py
automation/: mouse.py  notepad.py  screenshot.py
grounding/: grounder.py  planner.py  visual_fallback.py
utils/: annotate.py
