[project]
name = "desktop-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.49.2",
    "botcity-framework-core>=1.3.0",
    "google-genai>=2.10.0",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.2",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.34.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=5.12.1",
    "typing-extensions>=4.15.0",
]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]
